--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,11 @@
-
+version: '3.8'
 
 services:
   backend:
-    build:
-      context: ./backend
-    container_name: newsbias-backend
+    build: ./backend
     ports:
       - "8000:8000"
     volumes:
       - ./backend:/app
     environment:
-      - TRANSFORMERS_CACHE=/app/.cache
-
-  frontend:
-    build:
-      context: ./streamlit_app
-    container_name: newsbias-frontend
-    ports:
-      - "8501:8501"
-    volumes:
-      - ./streamlit_app:/app
-    depends_on:
-      - backend
+      - PYTHONUNBUFFERED=1
