--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,48 +2,36 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  build-test:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
+      - name: 📥 Checkout Repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
+      - name: 🐳 Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - name: 🧰 Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version
 
-    - name: Cache Docker layers
-      uses: actions/cache@v3
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-buildx-
+      - name: 🔧 Build and Start Containers
+        run: docker-compose up --build -d
 
-    - name: Build and test backend Docker image
-      run: |
-        docker build -t newsbias-backend ./backend
-        docker run --rm newsbias-backend python -c "print('✅ Backend container ran successfully')"
+      - name: ✅ Run Health Check (optional)
+        run: |
+          curl --fail http://localhost:8000/docs || exit 1
 
-    - name: Build and test frontend Docker image
-      run: |
-        docker build -t newsbias-frontend ./streamlit_app
-        docker run --rm newsbias-frontend python -c "print('✅ Frontend container ran successfully')"
-
-    - name: Run full stack and test
-      run: |
-        docker-compose up -d
-        sleep 10
-        curl --fail http://localhost:8501 || (echo "❌ Frontend failed" && exit 1)
-        curl --fail http://localhost:8000/docs || (echo "❌ Backend failed" && exit 1)
-        docker-compose down
+      # Optional: Run Python tests if you have them
+      # - name: 🧪 Run Backend Tests
+      #   run: docker exec <backend_container_name> pytest
